# kwordexp

./: .clangd  .gitignore  Makefile.am  bootstrap.sh  configure.ac
.devcontainer/: devcontainer.json
include/: Makefile.am  kio.h  kmalloc.h  kwordexp.h
src/: Makefile.am  kio.c  kio.h  kio.pc.in  kio_internal.h  kmalloc.c  kmalloc.pc.in  kmalloc_internal.h  kstr.c  kstr.h  kstrs.c  kstrs.h  kwordexp.c  kwordexp.h  kwordexp.pc.in  kwordexp_internal.h
test/: Makefile.am  runTest.c
